use Game of Thrones character names

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
   <head>
     <meta charset="utf-8">
     <title>Hangman game using React.js</title>
+    <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <script src="dist/bundle.js" type="text/javascript"></script>
+    <script src="build/bundle.js" type="text/javascript"></script>
   </body>
 </html>
